--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "categories": [
     "Snippets"
   ],
+  "repository": "https://github.com/pablezhang/fe-tool.git",
   "main": "./out/extension.js",
   "activationEvents": [],
   "contributes": {
