--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auto_tool",
+  "name": "@luckybo/auto-tool",
   "displayName": "auto-tool",
   "description": "",
   "version": "0.0.1",
